# conman

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  docs-pages.yml
conman-api/: Cargo.toml
conman-api/src/: auth.rs  error.rs  events.rs  lib.rs  metrics.rs  openapi.rs  rate_limit.rs  repo_provisioning.rs  request_context.rs  response.rs  router.rs  state.rs
conman-api/src/extractors/: mod.rs  pagination.rs
conman-api/src/handlers/: apps.rs  changesets.rs  deployments.rs  health.rs  jobs.rs  me.rs  metrics.rs  mod.rs  onboarding.rs  releases.rs  repos.rs  teams.rs  temp_envs.rs  tenants.rs  ui.rs  web.rs  workspaces.rs
conman-auth/: Cargo.toml
conman-auth/src/: auth_user.rs  lib.rs  password.rs  secrets.rs  token.rs
conman-core/: Cargo.toml
conman-core/src/: app.rs  app_surface.rs  audit.rs  auth_types.rs  changeset.rs  config.rs  deployment.rs  environment.rs  error.rs  git.rs  job.rs  lib.rs  notification.rs  notification_event.rs  rbac.rs  release.rs  repo.rs  runtime_profile.rs  team.rs  temp_env.rs  tenant.rs  ui.rs  workspace.rs
conman-db/: Cargo.toml
conman-db/src/: app_repo.rs  app_surface_repo.rs  audit_repo.rs  changeset_comment_repo.rs  changeset_profile_override_repo.rs  changeset_repo.rs  deployment_repo.rs  environment_repo.rs  invite_repo.rs  job_repo.rs  lib.rs  membership_repo.rs  notification_event_repo.rs  notification_pref_repo.rs  password_reset_repo.rs  release_repo.rs  repo_membership_repo.rs  repo_repo.rs  runtime_profile_repo.rs  team_membership_repo.rs  team_repo.rs  temp_env_repo.rs  tenant_repo.rs  ui_config_repo.rs  user_repo.rs  workspace_repo.rs
conman-git/: Cargo.toml
conman-git/src/: adapter.rs  client.rs  lib.rs  mock.rs  retry.rs
conman-jobs/: Cargo.toml
conman-jobs/src/: lib.rs
design-system/conman/: MASTER.md
docs/: IMPLEMENTATION.md  conman-v1-backlog.md  conman-v1-scope.md  conman-web-interface-plan.md  conman-web-interface-progress.md  execution-plan.md  execution-tracker.md  go-live-checklist.md  manual-api-testing-guide.md  observability-rollout.md  observability-slos.md  post-onboarding-ux-backlog.md  post-onboarding-ux-plan.md  runtime-profiles-draft.md  team-repo-app-implementation-plan.md  team-repo-app-model.md  tenant-repo-app-implementation-plan.md  tenant-repo-app-surface-implementation-plan.md  tenant-repo-app-surface-model.md
docs/backend/: IMPLEMENTATION.md  entity-relationship-diagram.md  execution-tracker.md  manual-api-testing-guide.md  runtime-profiles-draft.md  team-repo-app-implementation-plan.md  team-repo-app-model.md
docs/backend/epics/: E01-git-adapter.md  E05-changesets.md  E09-deployments.md  E11-notifications.md
docs/epics/: E00-platform.md  E02-auth.md  E03-app-setup.md  E04-workspaces.md  E05-changesets.md  E06-async-jobs.md  E07-queue.md  E08-releases.md  E09-deployments.md  E10-temp-envs.md  E11-notifications.md  E12-hardening.md
docs/history/: config-manager-plan.md
docs/history/mockups/: config-manager-mockup.html
docs/runbooks/: REVIEW-SIGNOFF.md  auth-failures.md  deployment-failure.md  gitaly-outage.md  mongodb-failover.md  release-assembly-failure.md  revalidation-storm.md  secrets-master-key-rotation.md  temp-env-cleanup-failure.md
docs/site/: style.css  template.html
ops/: docker-compose.observability.yml
ops/alertmanager/: alertmanager.yml
ops/alerts/: conman-alerts.yml
ops/grafana/: conman-overview.json
ops/grafana/dashboards/: conman-overview.json
ops/local-domains/: .env.example  docker-compose.yml
ops/local-domains/nginx/: default.conf
ops/prometheus/: prometheus.yml
scripts/: bootstrap-felipe-owner.sh  build-docs-site.sh  delete-team-tree-by-user.mongosh.js  publish-docs-site.sh
scripts/local-domains/: certs.sh  down.sh  up.sh
src/: main.rs
tests/e2e/: README.md  bootstrap_mirrored_repos.sh  bootstrap_one_team_per_repo.sh  run_full_staged_smoke.sh
tests/e2e/results/: 2026-02-26T03-45-43-staged-gitaly-attempt.md  20260226035709-timestamp-fix-summary.md  20260226040124-timestamp-fix-summary.md  20260226043437-full-e2e-summary.md  20260226043809-full-e2e-summary.md  20260226044007-full-e2e-summary.md  20260226044307-full-e2e-summary.md  20260226044825-full-e2e-summary.md  latest-gitaly-repo.json
tests/fault/: README.md
tests/fault/results/: 2026-02-26-health-before.headers  2026-02-26-health-before.json  2026-02-26-health-mongo-down.headers  2026-02-26-health-mongo-down.json  2026-02-26-health-mongo-recovered.headers  2026-02-26-report.md
tests/load/: README.md  concurrent_edits.js
tests/load/results/: 2026-02-26-health-ab-lenient.txt  2026-02-26-health-ab.txt  2026-02-26-report.md
tests/ops/: README.md  complete_runbook_signoff.sh  run_go_live_readiness_check.sh  run_mongo_backup_restore_drill.sh  run_observability_wiring_check.sh  run_plan_completion_gate.sh  run_team_repo_app_acceptance.sh  run_team_repo_surface_acceptance.sh  run_tenant_repo_surface_acceptance.sh
tests/ops/results/: 20260226044657-mongo-backup-restore-summary.md  20260226044706-observability-wiring-summary.md  20260226075333-go-live-readiness-summary.md  20260226075617-go-live-readiness-summary.md  20260226075757-go-live-readiness-summary.md  20260226080015-plan-completion-gate-summary.md  20260226080019-go-live-readiness-summary.md  (+2 more)
web/: .gitignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
(+100 files in other folders)
