[workspace]
members = [
  "conman-core",
  "conman-api",
  "conman-db",
  "conman-git",
  "conman-auth",
  "conman-jobs",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
aes-gcm-siv = "0.11"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bson = { version = "2.15", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
http = "1"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
mongodb = "3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.12", features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }

[package]
name = "conman"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
clap.workspace = true
conman-api = { path = "./conman-api" }
conman-auth = { path = "./conman-auth" }
conman-core = { path = "./conman-core" }
conman-db = { path = "./conman-db" }
conman-git = { path = "./conman-git" }
conman-jobs = { path = "./conman-jobs" }
dotenvy.workspace = true
mongodb.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
