[package]
name = "conman-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
conman-core = { path = "../conman-core" }
conman-db = { path = "../conman-db" }
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
uuid.workspace = true

[dev-dependencies]
http.workspace = true
