[package]
name = "conman-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv.workspace = true
base64.workspace = true
argon2.workspace = true
chrono.workspace = true
conman-core = { path = "../conman-core" }
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
uuid.workspace = true
