[package]
name = "conman-db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bson.workspace = true
chrono.workspace = true
conman-auth = { path = "../conman-auth" }
conman-core = { path = "../conman-core" }
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
