[package]
name = "conman-jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
conman-core = { path = "../conman-core" }
conman-db = { path = "../conman-db" }
metrics.workspace = true
mongodb.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
